# python-xdrvmake

./: .flake8  .gitignore  README.md  data.json  pyproject.toml
.github/workflows/: release.yaml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_19731b0e0bbcc73d_builder_py.html
test/: xdrvmaketest.py
xdrvmake/: builder.py  python-xdrvmake.code-workspace
xdrvmake/templates/: Makefile.j2  control.j2  postinst.j2  postrm.j2  preinst.j2  triggers.j2
