[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cross_driver_configurator"
description = "Generating GNU Make files for building out-of-tree kernel modules using the Effective Range devcontainers"
dynamic = ["version"]
dependencies = ["Jinja2","pyyaml","setuptools","python-dotenv","filelock"]
authors = [
  {name = "Effective Range Kft", email = "info@effective-range.com"},
]
maintainers = [
  {name = "Effective Range Kft", email = "info@effective-range.com"},
]
license = {file = "LICENSE"}
readme = "README.md"

[project.optional-dependencies]
dev = [
  "flake8>=6.0",
  "mypy>=1.8",
  "pytest",
  "coverage",
  "flake8-pyproject",
  "black",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["xdrvmake*"]

[tool.setuptools.package-data]
xdrvmake = ["templates/*.j2"]

[project.scripts]
xdrvmake = "xdrvmake.builder:main"

[tool.mypy]
# What to type-check
files = ["xdrvmake","test"]

# Practical defaults
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

# Be strict *where it matters*, but not painful
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false

# Imports / ecosystem sanity
ignore_missing_imports = false
follow_imports = "normal"

# Speed & noise control
pretty = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "jinja2.*",
  "yaml.*",
  "dotenv.*",
  "filelock.*",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
# Where tests live
testpaths = ["test"]
python_files = ["*test.py"]


[tool.coverage.run]
branch = true
source = ["xdrvmake"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 0

exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
]